2019-03-13  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* who-is-on.rkt: arp エントリーが incomplete な時はインサートしない。

	* [0.3.1] Makefile (git remote set-url origin ssh):
	リモートリポジトリを切り替える ds218j と syno2

	* mac addr ではなく、user.id を記録するようにするか。
	有効な user.id だけを記録する方がいいか。
	user.name でも。DB容量的には id だが。
	pings? も復活させる。
