@@ -1,4 +1,10 @@
-DB = who-is-on.sqlite3
+DB=who-is-on.sqlite3
+
+all:
+	@echo make ds218j to make remote repo to ds218j
+	@echo make syno2 to make remote repo to syno2j
+	@echo make create to create database and insert seeds
+	@echo make clean
 
 ds218j:
 	git remote set-url origin ssh://hkim@ds218j.local/git/who-is-on.git
