@@ -6,6 +6,11 @@
 
 (require db)
 
+;; need adjust
+(define *subnet* "192.168.0")
+(define *ping* "/bin/ping")
+(define *arp* "/usr/sbin/arp")
+
 (define (exec cmdline)
     (let* ((proc (apply process* (string-split cmdline)))
            (port (first proc))
@@ -19,26 +24,17 @@
 (define (exec* cmdline)
   (apply process* (string-split cmdline)))
 
-
 (define (arp)
-  (exec "/usr/sbin/arp -an"))
-
-(define (bc net from to)
-  (let ((cmd "/sbin/ping")
-        (arg "-t 2"))
-    (map thread-wait
-         (for/list ([i (range from to)])
-           (let ((cmdline (format "~a ~a ~a.~a" cmd arg net i)))
-             (thread (thunk (exec* cmdline))))))
-    #t))
+  (exec (format "~a -an" *arp*)))
 
 (define (broadcast)
-  (let ((net "10.0.34"))
-    (bc net 1 50)
-    (bc net 51 100)
-    (bc net 101 150)
-    (bc net 151 200)
-    (bc net 201 254)))
+  (define (bc net from to)
+    (map thread-wait
+         (for/list ([i (range from to)])
+           (let ((cmdline (format "~a -c 2 -t 2 ~a.~a" *ping* net i)))
+             (thread (thunk (exec* cmdline))))))
+    #t)
+  (bc *subnet* 1 254))
 
 (define (who-is-on)
   (let ((sql3 (sqlite3-connect #:database "who-is-on.sqlite3")))
@@ -47,6 +43,7 @@
         (query-exec sql3 "insert into mac_addrs (mac) values ($1)" mac)))
     (disconnect sql3)))
 
-(bc "10.0.34" 1 254)
+(broadcast)
 (who-is-on)
+
 
